--- a/styles/about.css
+++ b/styles/about.css
@@ -4,6 +4,9 @@
   width: 60vw;
   margin-left: 20vw;
   height: 100vh;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  margin-bottom: 24px;
 }
 
 .about-header {
