--- a/styles/showcase.css
+++ b/styles/showcase.css
@@ -8,7 +8,6 @@ body {
   display: flex;
   flex-direction: column;
   width: 100vw;
-  height: 100vh;
   overflow-x: hidden;
 }
 
@@ -27,6 +26,7 @@ body {
   width: 60vw;
   margin-left: auto;
   margin-right: auto;
+  min-height: 150px;
 }
 
 .item-container__image {
