--- a/styles/showcase.css
+++ b/styles/showcase.css
@@ -2,13 +2,14 @@ body {
   font-family: 'Roboto Slab', serif;
   font-weight: 600;
   background-color: #000000;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 .base-container {
   display: flex;
   flex-direction: column;
   width: 100vw;
-  overflow-x: hidden;
 }
 
 .first-item-container {
@@ -101,4 +102,9 @@ body {
   left: -300px;
   height: 40px;
   bottom: 360px;
+}
+
+.text-link {
+  color: white;
+  color: rgba(255, 255, 255, 0.5);
 }
