--- a/styles/mdb.css
+++ b/styles/mdb.css
@@ -1,10 +1,5 @@
 .mdb {
-  width: 100%;
-  display: grid;
-  grid-template-columns: repeat(5, minmax(0, 1fr));
   grid-template-rows: repeat(20, 6vw);
-  column-gap: 12px; /* Will create units within each column for margin buffers */
-  row-gap: 18px;
 }
 
 .mdb__header {
@@ -24,10 +19,15 @@
 
 .mdb__frame {
   grid-column: 1;
-  grid-row: 7 / 10;
+  grid-row: 7 / 11;
 }
 
 .mdb__banner-2 {
   grid-column: 2 / 5;
-  grid-row: 10 / 13;
+  grid-row: 12 / 15;
+}
+
+.mdb__banner-3 {
+  grid-column: 3 / 6;
+  grid-row: 17 / 20;
 }
