--- a/styles/home.css
+++ b/styles/home.css
@@ -61,11 +61,63 @@
   align-items: flex-end;
 }
 
-.page {
-  /* Layout for showcase content. */
-  padding-top: 16vh;
-  display: flex;
-  flex-direction: column;
-  margin: 18px 36px 12px 24px;
-  max-width: 100%;
+@media only screen and (max-width:600px) {
+  .home {
+    /* Home container */
+    width: 100vw;
+    height: 100vh;
+  }
+
+  /* Mobile */
+  .home__grid {
+    /* Grid for home page only */
+    display: grid;
+    margin: 18px 0px 12px 24px;
+    max-width: 100%;
+    height: 66.6667vh;
+    grid-auto-rows: 1fr;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    column-gap: 0; /* Will create units within each column for margin buffers */
+    row-gap: 6px; /* Same here */
+  }
+
+  .home__profile {
+    grid-column: 1 / 3;
+    grid-row: 2 / 3;
+  }
+
+  .home__profile-image {
+    object-position: 50% 50%;
+    object-fit: cover;
+    width: 100%;
+  }
+
+  .home__header {
+    grid-column: 1;
+    grid-row: 1;
+  }
+
+  .home__header__text {
+    font-weight: bold;
+    font-size: 72px;
+    line-height: 61.5px;
+  }
+
+  .home__contact {
+    grid-column: 3;
+    grid-row: 2;
+  }
+
+  .home__contact__button {
+    cursor: pointer;
+  }
+
+  .home__bio {
+    grid-column: 1 / 4;
+    grid-row: 4 / 5;
+  }
+
+  .mobile__hidden {
+    visibility: hidden;
+  }
 }
