--- a/styles/base.css
+++ b/styles/base.css
@@ -13,7 +13,6 @@ a {
   text-decoration: none;
   color: #FAF8F8;
   font-weight: lighter;
-  font-size: 20px;
 }
 
 h5 {
@@ -63,6 +62,15 @@ p {
 }
 
 /* Blocks */
+.page {
+  /* Layout for showcase content. */
+  padding-top: 16vh;
+  display: flex;
+  flex-direction: column;
+  margin: 18px 36px 12px 24px;
+  max-width: 100%;
+}
+
 .section {
   /* Showcase all work for a given section */
   width: 100%;
@@ -130,7 +138,6 @@ p {
   border-bottom: 1px #666 solid;
 }
 
-
 /* Captions */
 
 .caption {
@@ -142,4 +149,53 @@ p {
 
 .mt-caption {
   margin-top: 4px;
+}
+
+@media only screen and (max-width:600px) {
+  /* Mobile */
+  .page {
+    /* Layout for showcase content. */
+    padding-top: 0vh;
+    display: flex;
+    flex-direction: column;
+    margin: 18px 36px 12px 24px;
+    max-width: 100%;
+  }
+
+  .section {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    column-gap: 12px;
+    row-gap: 18px;
+  }
+
+  a {
+    text-decoration: none;
+    color: #FAF8F8;
+    font-weight: lighter;
+  }
+
+  h5 {
+    font-weight: lighter;
+    font-size: 12px;
+    line-height: 150%;
+  }
+
+  h6 {
+    font-weight: lighter;
+    font-size: 12px;
+    line-height: 133.333%;
+  }
+
+  h1 {
+    font-weight: bold;
+    font-size: 36px;
+    margin-top: -6px;
+  }
+
+  p {
+    font-size: 8px;
+    font-weight: normal;
+  }
 }
