--- a/styles/mdb.css
+++ b/styles/mdb.css
@@ -31,3 +31,39 @@
   grid-column: 3 / 6;
   grid-row: 17 / 20;
 }
+
+@media only screen and (max-width:600px) {
+  .mdb {
+    grid-template-rows: repeat(20, 6vw);
+  }
+
+  .mdb__header {
+    grid-column: 1;
+    grid-row: 1;
+  }
+
+  .mdb__desc {
+    grid-column: 2 / 4;
+    grid-row: 1;
+  }
+
+  .mdb__banner-1 {
+    grid-column: 1 / 4;
+    grid-row: 3 / 7;
+  }
+
+  .mdb__frame {
+    grid-column: 1;
+    grid-row: 7 / 11;
+  }
+
+  .mdb__banner-2 {
+    grid-column: 1 / 4;
+    grid-row: 12 / 16;
+  }
+
+  .mdb__banner-3 {
+    grid-column: 1 / 4;
+    grid-row: 16 / 20;
+  }
+}
