--- a/styles/tke.css
+++ b/styles/tke.css
@@ -37,3 +37,45 @@
   grid-column: 1 / 3;
   grid-row: 27 / 32;
 }
+
+@media only screen and (max-width:600px) {
+  .tke {
+    grid-template-rows: repeat(35, 6vw);
+    margin-top: 6vw;
+  }
+
+  .tke__header {
+    grid-column: 1;
+    grid-row: 1;
+  }
+
+  .tke__desc {
+    grid-column: 2 / 4;
+    grid-row: 1;
+  }
+
+  .tke__front-1 {
+    grid-column: 1 / 3;
+    grid-row: 3 / 10;
+  }
+
+  .tke__front-2 {
+    grid-column: 2 / 4;
+    grid-row: 10 / 17;
+  }
+
+  .tke__back {
+    grid-column: 1 / 3;
+    grid-row: 17 / 24;
+  }
+
+  .tke__banner {
+    grid-column: 1 / 4;
+    grid-row: 25 / 29;
+  }
+
+  .tke__square {
+    grid-column: 1 / 3;
+    grid-row: 30 / 35;
+  }
+}
