--- a/styles/base.css
+++ b/styles/base.css
@@ -151,11 +151,22 @@ p {
   margin-top: 4px;
 }
 
+.mobile-only {
+  display: none;
+}
+
 @media only screen and (max-width:600px) {
   /* Mobile */
+  .mobile-only {
+    display: inline;
+  }
+  .desktop-only {
+    display: none;
+  }
+
   .page {
     /* Layout for showcase content. */
-    padding-top: 0vh;
+    padding-top: 12vw;
     display: flex;
     flex-direction: column;
     margin: 18px 36px 12px 24px;
@@ -166,7 +177,7 @@ p {
     width: 100%;
     display: grid;
     grid-template-columns: repeat(3, minmax(0, 1fr));
-    column-gap: 12px;
+    column-gap: 0;
     row-gap: 18px;
   }
 
